Nav Bar complete.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,26 @@ body {
 #menu-appbar .MuiMenuItem-root:hover {
     background-color: rgb(199, 199, 199);
 }
+
+#menu-appbar .MuiMenuItem-root:not(:last-child) {
+    border-bottom-color: rgb(200, 200, 200, 0.8);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+}
+
+
+#menu-appbar .MuiMenuItem-root {
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+
+#menu-opener {
+    height: 64px;
+    cursor: pointer;
+}
+
+#menu-opener:hover {
+    min-height: 100%;
+    background-color: rgba(0, 0, 0, 0.24);
+}
