--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,13 @@ body {
     margin: 0;
 }
 
+#root {
+    min-width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 #menu-appbar .MuiMenuItem-root:hover {
     background-color: rgb(199, 199, 199);
 }
