--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,13 @@ body {
     margin: 0;
 }
 
+#root {
+    min-width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 #menu-appbar .MuiMenuItem-root:hover {
     background-color: rgb(199, 199, 199);
 }
@@ -26,5 +33,14 @@ body {
 
 #menu-opener:hover {
     min-height: 100%;
+    background-color: rgba(0, 0, 0, 0.24);
+}
+
+.sidebar>a {
+    text-decoration: none;
+    color: initial
+}
+
+.sidebar>a>li:hover {
     background-color: rgba(0, 0, 0, 0.24);
 }
